# sparc

./: .gitignore  README.md  pyproject.toml
src/examples/: batch_run.py  reload_run.ipynb
src/examples/full_example/: full_example.ipynb
src/examples/full_example/data/1472/iof/: ZL0_1472_0797612518_223IOF_N0711018ZCAM09538_1100LMA01.IMG  ZL0_1472_0797612518_223IOF_T0711018ZCAM09538_110300A01.IMG  ZL0_1472_0797612530_223IOF_N0711018ZCAM09538_1100LMA01.IMG  ZL0_1472_0797612530_223IOF_T0711018ZCAM09538_110300A01.IMG  ZL0_1472_0797612532_223IOF_N0711018ZCAM09538_1100LMA01.IMG  ZL0_1472_0797612532_223IOF_T0711018ZCAM09538_110300A01.IMG  ZL0_1472_0797612569_331IOF_N0711018ZCAM04115_1100LMA01.IMG  ZL0_1472_0797612569_331IOF_T0711018ZCAM04115_110300A01.IMG  ZL0_1472_0797612578_331IOF_N0711018ZCAM04115_1100LMA01.IMG  ZL0_1472_0797612578_331IOF_T0711018ZCAM04115_110300A01.IMG  ZL0_1472_0797612674_331IOF_N0711018ZCAM04115_1100LMA01.IMG  ZL0_1472_0797612674_331IOF_T0711018ZCAM04115_110300A01.IMG  ZL0_1472_0797612890_863IOF_T0711018ZCAM03022_100300A01.IMG  ZL0_1472_0797616358_456IOF_N0720000ZCAM07125_1100LMA01.IMG  ZL0_1472_0797616358_456IOF_T0720000ZCAM07125_110300A01.IMG  ZL1_1472_0797612580_331IOF_N0711018ZCAM04115_1100LMA01.IMG  ZL1_1472_0797612580_331IOF_T0711018ZCAM04115_110300A01.IMG  ZL1_1472_0797612667_332IOF_N0711018ZCAM04115_1100LMA01.IMG  ZL1_1472_0797612667_332IOF_T0711018ZCAM04115_110300A01.IMG  ZL1_1472_0797612879_863IOF_N0711018ZCAM03022_100085A01.IMG  ZL1_1472_0797612879_863IOF_T0711018ZCAM03022_100300A01.IMG  ZL2_1472_0797612585_331IOF_N0711018ZCAM04115_1100LMA01.IMG  (+92 more)
src/sparc/: __init__.py
src/sparc/core/: __init__.py  constants.py  sparc.py
src/sparc/data/: __init__.py  loading.py
src/sparc/preprocessing/: __init__.py  calibration.py  masking.py
src/sparc/roi/: __init__.py  extraction.py  filtering.py
src/sparc/segmentation/: __init__.py  sam_segmentation.py
src/sparc/spectral/: __init__.py  analysis.py  metrics.py
src/sparc/utils/: __init__.py  array_ops.py  geometry.py  io.py  threading.py
src/sparc/visualization/: __init__.py  plotting.py
(+126 files in other folders)
