[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc"
version = "1.0.0"
description = "Spectral Pattern Analysis for ROI Classification"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Lars Olt", email = "oltl2@wwu.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (required for basic functionality)
dependencies = [
    "scipy>=1.7.0", 
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
    "scikit-learn>=1.0.0",
    "kneed>=0.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0,<1.25.0",
    "fs<2.1",
    "setuptools<80",
    "rich",
    "pdr",
    "boto3",
    "gspread",
    "sh",
    "scikit-image",
    "astropy",
    "ipython",
    "ipykernel",
    "jupyter",
    "silencio @ git+https://github.com/MillionConcepts/silencio.git",
    "pretty-plot @ git+https://github.com/MillionConcepts/pretty-plot.git",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "asdf @ git+https://github.com/MillionConcepts/asdf.git", 
    "marslab @ git+https://github.com/MillionConcepts/marslab.git"
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.900",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.uv.workspace]
members = [
    "sparc-project",
]